# kairos

./: .commitlintrc.js  .gitignore  .release-it.json  .simple-git-hooks.json  .simple-release.js  CHANGELOG.md  Dockerfile  LICENSE  README.md  commitlint.config.mjs  docker-compose.yaml  eslint.config.js  package-lock.json  package.json  svelte.config.js  vite.config.ts
.github/workflows/: build.yaml  commit.yaml  publish.yaml  release.yaml
backend/: go.mod  go.sum  main.go  package-lock.json  package.json  pb_schema.json  tsconfig.json  tsup.config.js
backend/course_providers/: README.md  deno.json  main.ts  package.json  types.ts  utils.ts
backend/courses/: .gitignore  README.md  main.py  provider.py  pyproject.toml  remote.py
backend/courses/commands/: add_provider.py  compare.py  list.py  remote.py  run.py
backend/courses/providers/BE_KULEUVEN/: manifest.json  provider.py
backend/courses/providers/BE_UGENT/: courses-2025.csv  manifest.json  provider.py  remote-2025.csv
backend/migrations/: 1739793600_initial_settings.go  1753630296_create_institutions_collection.go  1753631541_create_users_collection.go  1753631923_create_courses_collection.go  1756674740_collections_snapshot.go  1756674804_setup.go  1759477093_remove_vines_position.go  (+14 more)
frontend/: package-lock.json  package.json  svelte.config.js  versions.json  vite.config.ts
messages/: en.json  nl.json
pocketbase/: go.mod  main.go
project.inlang/: project_id
src/: app.html  hooks.server.ts  kairos-logo.svelte  kairos.svelte  style.css
sveltekit/: package.json  svelte.config.js
(+272 files in other folders)
